# service/api/leave-group.go
@@ -3,12 +3,13 @@ package api
 import (
 	"github.com/julienschmidt/httprouter"
 	"net/http"
+	"strings"
 )
 
 func (rt *_router) leaveChat(w http.ResponseWriter, r *http.Request, ps httprouter.Params) {
 	w.Header().Set("Content-Type", "application/json")
-	owner := r.Header.Get("Authorization")
-	member_id := ps.ByName("member_id") // QUI
+	owner := strings.Split(r.Header.Get("Authorization"), " ")[1]
+	member_id := ps.ByName("member_id") 
 	if owner != member_id {
 		w.WriteHeader(http.StatusForbidden)
 		return
